--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- HUD Overlay -->
-  <div id="hud">
+  <div id="hud"><body>
     <div id="hud-left">
       <div class="hud-item">
         <span class="hud-label">TIME</span>
@@ -60,6 +60,7 @@
 
   <!-- Three.js from CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
   <script src="js/game.js"></script>
 </body>
 </html>
