things and more things

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Patrick Run!</title>
+  <title>SpongeBob Run!</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" type="image/png" href="patrick.png">
+  <link rel="icon" type="image/png" href="spongebob.png">
 </head>
 <body>
   <!-- HUD Overlay -->
@@ -40,8 +40,8 @@
   <!-- Start / Game Over Screen -->
   <div id="overlay" class="active">
     <div id="overlay-content">
-      <img src="patrick.png" alt="Patrick" class="overlay-logo">
-      <h1>PATRICK <span class="accent">RUN!</span></h1>
+      <img src="spongebob.png" alt="SpongeBob" class="overlay-logo">
+      <h1>SpongeBob <span class="accent">RUN!</span></h1>
       <p id="overlay-sub">Survive as long as you can. Don't let them catch you!</p>
       <div id="final-score" class="hidden">
         <span class="score-label">FINAL SCORE</span>
@@ -61,6 +61,7 @@
   <!-- Three.js from CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/utils/SkeletonUtils.js"></script>
   <script src="js/game.js"></script>
 </body>
 </html>
